<resources>
    <string name="app_name">Voltorb Flip Calculator</string>
    <string name="calculate_button">Calculate</string>
    <string name="voltorbTitle">Voltorb</string>
    <string name="totalTitle">Total</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="nonResponseWarning">Note: App may appear unresponsive during some calculations</string>
    <string name="zero">0</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="reset">Reset</string>
    <string name="how_to_use_app_title">How to use calculator</string>
    <string name="reset_title">Reset the board</string>
    <string name="info_title">App Information</string>
    <string name="YellowText">Yellow cell: Both Voltorb and points possible</string>
    <string name="RedText">Red cell: Only Voltorb and one possible</string>
    <string name="BlueText">Blue cell: Cell(s) with lowest chance of Voltorb</string>
    <string name="GrayText">Gray cell: Always one</string>
    <string name="GreenText">Green cell: Points possible, safe</string>
    <string name="ColoredTextTitle">Color Codes</string>
    <string name="DirectionsReset">4. To reset the board, tap the reset button or just enter new values and hit calculate</string>
    <string name="DirectionsFlipCell">3. When you flip a cell in game, tap it in the app to set its value</string>
    <string name="DirectionsCalculate">2. Press Calculate (may take a few seconds)</string>
    <string name="DirectionsEnterValues">1. Enter values shown on the board</string>
    <string name="HeaderInstructions">How to Use</string>
    <string name="HeaderInstructionsGame">How to Play</string>
    <string name="AboutVoltorbFlip">Voltorb Flip is a minigame in the Game Corner of Pokémon Heart Gold and Soul Silver, as well as many fangames.</string>
    <string name="AboutCalculator">While Voltorb Flip is a game of chance, it can be partially solved, which is the goal of this app. This app calculates the likelyhood of each tile, and shows you the most likely solution.</string>
    <string name="AboutFeedback">If you have any questions, comments, or suggestions, send me an email.</string>
    <string name="feedback">Feedback</string>
    <string name="AboutCalculatorHeader">About Voltorb Flip Calculator</string>
    <string name="AboutVoltorbFlipHeader">About Voltorb Flip</string>
    <string name="EmailString">VoltorbFlipCalculator@gmail.com</string>
    <string name="row1total">R1T</string>
    <string name="row2total">R2T</string>
    <string name="row3total">R3T</string>
    <string name="row4total">R4T</string>
    <string name="row5total">R5T</string>
    <string name="row1voltorb">R1V</string>
    <string name="row2voltorb">R2V</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="switchActivity">Switch between the came and calculator</string>
    <string name="flag">Flag</string>
    <string name="quit">Quit</string>
    <string name="game_coins">Earned Coins</string>
    <string name="total_coins">Your Coins</string>
    <string name="stopFlag">Stop Flagging</string>
</resources>
