<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HeaderInstructionsGame"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DirectionsEnterValues" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DirectionsCalculate" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DirectionsFlipCell" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DirectionsReset" />

    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ColoredTextTitle"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/GreenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GreenText"
        android:textColor="@color/GoodGreen" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/YellowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/YellowText"
        android:textColor="@color/ChanceYellow" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/RedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RedText"
        android:textColor="@color/BadRed" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/BlueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BlueText"
        android:textColor="@color/BestBlue" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/GreyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GrayText"
        android:textColor="@color/DarkerGray" />

</LinearLayout>