<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AboutVoltorbFlipHeader"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/AboutVoltorbFlip" />


    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AboutCalculatorHeader"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AboutCalculator"
        android:textAlignment="center" />

    <View
        android:id="@+id/divider13"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textAlignment="center"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider11"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/AboutFeedback" />

    <View
        android:id="@+id/divider12"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/EmailString"
        android:textAlignment="center"
        android:textColorLink="@color/VoltorbFlipGreen" />


</LinearLayout>